@@ -40,7 +40,7 @@ _repairIbusConfigFn () {
 
   # Hiding the systray icon via IBus's dconf setting doesn't work reliably,
   # so we use a Plasma script to do it.
-  _cm2RunPlasmaScriptFn 'fixIbusPanelIcon';
+  _cm2RunPlasmaScriptFn 'fixIbusPanelIcon.js';
 }
 ## . END _repairIbusConfigFn }
 
@@ -51,7 +51,7 @@ _checkIbusConfigFn () {
   # NOTE: Right now this just checks for a running IBus service. It may be
   # worthwhile to also check and see if IBus is installed.
   if _chkInstalledPkgFn 'ibus'; then
-    _do_show_icon="$(_cm2RunPlasmaScriptFn 'chkIbusPanelIcon')";
+    _do_show_icon="$(_cm2RunPlasmaScriptFn 'chkIbusPanelIcon.js')";
     _do_use_system_keyboard="$("${_dconfExe}" read \
      '/desktop/ibus/general/use-system-keyboard-layout')";
 
