@@ -131,6 +131,19 @@ _installSynapticsFn () {
 }
 ## . END _installSynapticsFn }
 
+## BEGIN _purgeRollbackFn {
+#
+_purgeRollbackFn () {
+  _cm2SetMsgFn 'Purge kfocus-rollback package';
+  if apt-get purge -y 'kfocus-rollback'; then
+    _cm2SucFn;
+  else
+    _cm2WarnFn;
+    return 1;
+  fi
+}
+## . END _purgeRollbackFn }
+
 ## BEGIN _chkBiosUpdateFn {
 # Purpose: Return true if no bios upgrade needed, false otherwise
 #
@@ -289,6 +302,18 @@ _chkHwConfigFn () {
   fi
   ## . End Run lib updates iff hardware reconfig is flagged }
 
+  ## BEGIN Detect if kfocus-rollback should be removed {
+  #
+  if [ -n "${_rollbackSetExe}" ]; then
+    _btrfs_status="$("${_rollbackSetExe}" 'getBtrfsStatus')";
+    if [ "${_btrfs_status}" = 'UNSUPPORTED' ] \
+      || [ "${_btrfs_status}" = 'INCONSISTENT' ]; then
+      _msg='purge-rollback;;';
+      _reason_list+=( "${_msg}" );
+    fi
+  fi
+  ## . END Detect if kfocus-rollback should be removed }
+
   ( IFS=$'|'; echo "${_reason_list[*]}"; )
 }
 ## . END _chkHwConfigFn }
@@ -315,6 +340,7 @@ _fixHwConfigFn () {
       'install-nvidia'    ) _cmd_list=( '_installNvidiaFn'    );;
       'install-synaptics' ) _cmd_list=( '_installSynapticsFn' );;
       'purge-kbd-ite'     ) _cmd_list=( '_purgeKbdIteFn'      );;
+      'purge-rollback'    ) _cmd_list=( '_purgeRollbackFn'    );;
       *) _cm2WarnStrFn "Option ${_bit_list[0]} is not supported";
         continue;
         ;;
